src/css/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  h1{
    @apply leading-normal;
  }
  h2{
    @apply text-4xl;
  }
  h4 {
    @apply text-lg font-custom;
  }
  h6{
    @apply text-grayColor-custom text-xl;
  }
}

@layer components {
  .td-first-colum{
    @apply p-6 text-lg text-left;
  }
  .accordion__button{
    @apply text-black-custom font-normal bg-grayColor-BgGray;
  }
  .faq-title{
    @apply text-black-custom font-normal font-bold pr-12;
  }
  .faq-answer{
    @apply text-base text-grayColor-custom leading-7 pr-12;
  }
  .checkImg{
    @apply w-5 h-4;
  }
  .btn-primary-lg {
    @apply bg-primary text-white py-3 text-sm px-6 sm:px-10 text-center font-bold block rounded-lg border hover:bg-blueNew-custom;
  }
  .btn-secondary-lg {
    @apply py-3 text-sm px-6 sm:px-10 text-center font-bold block rounded-lg border hover:bg-primary hover:text-white;
  }
  .btn-primary-sm {
    @apply bg-primary text-white py-2 px-6 md:px-8 lg:px-8 text-center block rounded-lg border text-sm hover:bg-blueNew-custom;
  }
  .btn-secondary-sm {
    @apply py-2 px-6 md:px-8 lg:px-8 text-center block rounded-lg border text-sm border-primary hover:bg-primary hover:text-white;
  }
}

/* cards css */
@media only screen and (min-width: 1024px) {
  .pricing-plans:after{
    content: '';
    position: absolute;
    right:-95%;
    top:16%;
    width:100%;
    height: 1px;
    border-top:10px solid #fff;
  }
  .pricing-plans:before{
    content: '';
    position: absolute;
    left:-95%;
    top:35%;
    width:100%;
    height: 1px;
    border-top:10px solid #fff;
  }
  .proCard:before{
    content: '';
    position: absolute;
    right:-25px;
    top:34%;
    width:50px;
    height: 1px;
    border-top:10px solid #fff;
  }
  .proCard:after{
    content: '';
    position: absolute;
    left:-25px;
    top:15%;
    width:50px;
    height: 1px;
    border-top:10px solid #fff;
  }
}

/* Faq Section Css */
.faqcta{
  background-color: #ffffff;
}
.accordion{
  border:none;
}
.accordion__panel{
  padding:10px 20px;
}
.accordion__button:hover{
  background:none;
}
.accordion__button{
  position: relative;
}
.accordion__title{
  position: relative;
  width:100%;
}
.accordion .accordion__title:before{
  background-image: url('../images/math-plus.svg');
  border: none;
  transform: rotate(0deg);
  background-size: 100%;
  background-repeat: no-repeat;
  width: 16px;
  height: 16px;
  position: absolute;
  content:'';
  right: 0;
  top: 7px;
}
.accordion.active .accordion__title:before{
  display: none;
}
.accordion.active .accordion__title:after{
  background-image: url('../images/math-minus.svg');
  border: none;
  transform: rotate(0deg);
  background-size: 100%;
  background-repeat: no-repeat;
  width: 16px;
  height: 16px;
  position: absolute;
  content:'';
  right: 0px;
  top: 7px;
}
button.accordion:focus{
  outline: none;
}
.accordion__item + .accordion__item{
  border:none;
}
.accordion__title,
.accordion__content{
  padding-right: 50px;
}
.accordion__text{
  color: #4E4E4E;
}
p.accordion__title{
  color: #000000;
}
.faq-cta{
  --tw-shadow: 0 1px 24px rgba(0, 0, 0, 0.05), 0 1px 24px rgba(0, 0, 0, 0.05);
    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}
/* rangeslider Section Css */
.rangeslider-horizontal{
  height: 16px;
}
.rangeslider-horizontal .rangeslider__fill{
  background-color:#0066FF;
}
.rangeslider__handle{
  position: relative;
}
.rangeslider-horizontal .rangeslider__handle:after{
  width: 25px;
  height: 25px;
  background: #0066FF url('../images/select.png') no-repeat center center;
  background-size: 16px;
  top: 8px;
  left: 8px;
  box-shadow:none;
}
.rangeslider{
  background-color: #EEF5F5;
  margin:15px 0;
}
.rangeslider, .rangeslider .rangeslider__fill{
  box-shadow:none;
}
.rangeslider-horizontal .rangeslider__handle{
  border:none;
  background:#EEF5F5;
  width: 41px;
  height: 41px;
  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
}
.rangeslider .rangeslider__handle:focus{
  outline: none;
}
.rangeslider.rangeslider-horizontal {
  position: relative;
}
.rangeslider__handle-label{
  position: absolute;
  top: 64px;
  left: -87%;
  background-color: #0066FF;
  font-size: 28px;
  font-weight: bold;
  width: auto;
  padding: 0 25px;
  height: 42px;
  border-radius: 8px;
  color: #ffffff;
}
.rangeslider__handle-label:before {
  position: absolute;
  content: '';
  top: -15px;
  left: calc(50% - 9px);
  border-left: 11px solid transparent;
  border-right: 11px solid transparent;
  border-bottom: 18px solid #0066FF;
}
.rangeslider-horizontal .rangeslider__handle-tooltip{
  display: none;
}
.rangeslider-horizontal .rangeslider__handle-tooltip span{
  margin-top:0;
}
.rangeslider-horizontal .rangeslider__handle-tooltip:after{
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  border-bottom: 15px solid #0066FF;
  border-top: none;
  left: 50%;
  bottom: auto;
  top:-14px;
  transform: translate3d(-50%, 0, 0);
}

/* arrow cta css*/

.arrow-cta:before{
  position: absolute;
  content:'';
  width: 20px;
  height: 20px;
  background: url('../images/arrow-right-o.png') no-repeat center center;
  background-size: 20px;
  top:0;
  left:0; 
}

@media only screen and (max-width: 348px) {
  .arrow-cta{
    padding:0 20px;
  }
  .arrow-cta:before{
    left:10px;
  }
}
@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap");

/* Style the accordion section */
.accordion__section {
  display: flex;
  flex-direction: column;
}

/* Style the buttons that are used to open and close the accordion panel */
.accordion {
  color: #444;
  cursor: pointer;
  display: flex;
  align-items: center;
  border: none;
  outline: none;
}

/* Style the accordion content title */
.accordion__title {
  text-align: left;
  font-family: "Basis Grotesque Pro", sans-serif;
}

/* Style the accordion chevron icon */
.accordion__icon {
  margin-left: auto;
  transition: transform 0.2s ease;
}

/* Style the accordion content panel. Note: hidden by default */
.accordion__content {
  overflow: auto;
  transition: max-height 0.2s ease;
}

/* Style the accordion content text */
.accordion__text {
  font-family: "Basis Grotesque Pro", sans-serif;
}
/*our logo section*/
.our-logos .owl-stage{
  display: flex;
  align-items: center;
}
.our-logos .owl-item img{
  width: auto;
}
.our-logos .owl-item{
  display: inline-block;
  text-align: center;
}
.post-arrow.right-image:after{
  display: none;
}
.testimonials .owl-nav button.owl-next,
.testimonials .owl-nav button.owl-prev{
  background: none !important;
  width: 110px;
}
.testimonials .owl-nav button.owl-next:focus,
.testimonials .owl-nav button.owl-prev:focus{
  outline: none;
}
.testimonials .owl-nav button.owl-next span,
.testimonials .owl-nav button.owl-prev span{
  display: none;
}
.testimonials .owl-nav button.owl-next:after,
.testimonials .owl-nav button.owl-prev:before{
  position: absolute;
  content: '';
  width: 110px;
  height: 100%;
}
.testimonials .owl-nav button.owl-prev:before{
  left: -25px;
  top: 0;
  background: url('../images/prev.png') no-repeat center center;
  background-size: 110px;
}
.testimonials .owl-nav button.owl-next:after{
  right: -25px;
  top: 0;
  background: url('../images/next.png') no-repeat center center;
  background-size: 110px;
}
.left-right-section .flex:last-child.row-wrapper h3 {
  font-size: 50px;
  line-height: 60px;
}
.tab-section-wrapper{
  max-width: 1099px;
}
.blog-title-wrap {
  min-height: 145px;
}
div>a.transperent-btn:last-child{
  font-weight: bold;
}

@media only screen and (max-width: 639px) {
  .banner-section p {
    font-size: 18px;
    line-height: 28px;
    padding-bottom: 10px;
  }
  html,body{
    overflow-x: hidden;
  }
  .tab-content-item p{
    font-size: 14px;
    color: #000000;
  }
  .lr-icon:before{
    width: 0px;
  }
  .left-right-section .flex:last-child.row-wrapper h3{
    font-size: 38px;
    line-height: 46px;
  }
  .blog-title-wrap {
     min-height: 100px;
  }
  .footer-menus-wrap .footer-menus:nth-child(3) {
     clear: both;
     width: 100%;
  }
  /* For plan cards css*/
  .plans-section{
    line-height: 54px;
  }
  .custom-bg {
     background: #fff;
  }
  .custom-gradient{    
    background: #eef5f5; /* Old browsers */
    background: -moz-linear-gradient(top,  #eef5f5 0%, #e3f1f1 10%, #ffffff 100%); /* FF3.6-15 */
    background: -webkit-linear-gradient(top,  #eef5f5 0%,#e3f1f1 10%,#ffffff 100%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom,  #eef5f5 0%,#e3f1f1 10%,#ffffff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eef5f5', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
  }
}
@media only screen and (max-width: 1279px){
  .testimonials-wrap {
    background-position: center 85px;
  }
} 
@media only screen and (max-width: 1023px){
  .testimonials-wrap .owl-nav{
    position: absolute;
    bottom: 75px;
    left: 0;
    width: 100%;
  }
    .testimonials .owl-nav button.owl-prev:before {
    left: 180px;
    background-size: 90px;
    width: 60px;
  }
  .testimonials .owl-nav button.owl-next:after{
    right: 180px;
    background-size: 90px;
    width: 60px;
  }
}

@media only screen and (max-width: 767px) {
  .tab-section .closetab,
  .tab-section .opentab {
    position: relative;
  }
  .tab-section .closetab:after {
    position: absolute;
    content: '';
    width: 20px;
    height: 20px;
    background: url('../images/chevron-down.png') no-repeat center center;
    top: 23px;
    right: 0;
  }
  .tab-section .opentab:after {
    position: absolute;
    content: '';
    width: 20px;
    height: 20px;
    background: url('../images/chevron-up.png') no-repeat center center;
    top: 23px;
    right: 0;
  }
  .accordion__section button.accordion,
  .accordion__section .accordion__content{
    padding-left: 0;
  }
}
@media only screen and (min-width: 640px) {
  .mobile-table {
    display: none;
  }
}

